Edit Some Titles

--- a/data/terminal_initial.html
+++ b/data/terminal_initial.html
@@ -1,5 +1,5 @@
 <div style="margin:8px;">
-  <h1><img src="img/icon_128.png" width="64" height="64"/> Espruino Web IDE</h1>
+  <h1><img src="img/icon_128.png" width="64" height="64"/> NodeMCU WEB IDE</h1>
   <p>A Serial Port Terminal Web App for Chrome</p>
 
   <p>This app is designed to work with <a href="http://www.espruino.com" target="_blank">Espruino JavaScript powered Microcontrollers</a>. 
