--- a/main.html
+++ b/main.html
@@ -96,16 +96,16 @@
   <!-- Non-vital Plugins -->
   <script src="EspruinoTools/plugins/boardJSON.js"></script>
   <script src="EspruinoTools/plugins/versionChecker.js"></script>
-  <script src="EspruinoTools/plugins/compiler.js"></script>
+  <!--<script src="EspruinoTools/plugins/compiler.js"></script>-->
   <script src="EspruinoTools/plugins/assembler.js"></script>
   <script src="EspruinoTools/plugins/getGitHub.js"></script>
   <script src="EspruinoTools/libs/targz.js"></script> <!-- needed for npmMpdules -->
   <script src="EspruinoTools/plugins/npmModules.js"></script>
-  <script src="EspruinoTools/plugins/setTime.js"></script>
+  <!--<script src="EspruinoTools/plugins/setTime.js"></script>-->
 
-  <script src="EspruinoTools/libs/esprima/esprima.js"></script> <!-- needed for minify -->
-  <script src="EspruinoTools/libs/esprima/esmangle.js"></script> <!-- needed for minify -->
-  <script src="EspruinoTools/libs/esprima/escodegen.js"></script> <!-- needed for minify -->
+  <!--<script src="EspruinoTools/libs/esprima/esprima.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
+  <!--<script src="EspruinoTools/libs/esprima/esmangle.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
+  <!--<script src="EspruinoTools/libs/esprima/escodegen.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
   <script src="EspruinoTools/plugins/minify.js"></script>
   
   <script src="js/plugins/tutorial.js"></script>
@@ -123,7 +123,7 @@
   
   <!-- <script src="js/plugins/_examplePlugin.js"></script> -->
   
-  <title>Espruino Web IDE</title>
+  <title>NodeMCU WEB IDE</title>
 </head>
 <body>
 
@@ -131,7 +131,7 @@
 
     <!-- Title Bar -->
     <div class="window__title-bar title-bar">
-      <h5 class="title-bar__title">Espruino Web IDE</h5>
+      <h5 class="title-bar__title">NodeMCU WEB IDE</h5>
       <div class="title-bar__buttons"></div>
     </div>
 
