--- a/main.html
+++ b/main.html
@@ -62,23 +62,23 @@
 <script src="js/libs/acorn/infer.js"></script>
 <script src="js/libs/acorn/doc_comment.js"></script>
 
-  <script src="EspruinoTools/espruino.js"></script>
+  <script src="NodeMCUTools/nodemcu.js"></script>
   
-  <script src="EspruinoTools/core/utils.js"></script>
-  <script src="EspruinoTools/core/config.js"></script>
+  <script src="NodeMCUTools/core/utils.js"></script>
+  <script src="NodeMCUTools/core/config.js"></script>
   <script src="js/core/notifications.js"></script>
   <script src="js/core/status.js"></script>
   <script src="js/core/app.js"></script>
   <script src="js/core/file.js"></script>
   <script src="js/core/code.js"></script>
 
-  <script src="EspruinoTools/core/serial_chrome.js"></script>
-  <script src="EspruinoTools/core/serial_chrome_pre_m33.js"></script>
-  <script src="EspruinoTools/core/terminal.js"></script>
-  <script src="EspruinoTools/core/codeWriter.js"></script>
-  <script src="EspruinoTools/core/modules.js"></script>
-  <script src="EspruinoTools/core/env.js"></script>
-  <script src="EspruinoTools/core/flasher.js"></script>
+  <script src="NodeMCUTools/core/serial_chrome.js"></script>
+  <script src="NodeMCUTools/core/serial_chrome_pre_m33.js"></script>
+  <script src="NodeMCUTools/core/terminal.js"></script>
+  <script src="NodeMCUTools/core/codeWriter.js"></script>
+  <script src="NodeMCUTools/core/modules.js"></script>
+  <script src="NodeMCUTools/core/env.js"></script>
+  <script src="NodeMCUTools/core/flasher.js"></script>
   
   <script src="js/core/editorBlockly.js"></script> 
   <script src="js/core/editorJavaScript.js"></script> 
@@ -94,19 +94,19 @@
   <script src="js/core/settingsFlasher.js"></script>
 
   <!-- Non-vital Plugins -->
-  <script src="EspruinoTools/plugins/boardJSON.js"></script>
-  <script src="EspruinoTools/plugins/versionChecker.js"></script>
-  <!--<script src="EspruinoTools/plugins/compiler.js"></script>-->
-  <script src="EspruinoTools/plugins/assembler.js"></script>
-  <script src="EspruinoTools/plugins/getGitHub.js"></script>
-  <script src="EspruinoTools/libs/targz.js"></script> <!-- needed for npmMpdules -->
-  <script src="EspruinoTools/plugins/npmModules.js"></script>
-  <!--<script src="EspruinoTools/plugins/setTime.js"></script>-->
+  <script src="NodeMCUTools/plugins/boardJSON.js"></script>
+  <script src="NodeMCUTools/plugins/versionChecker.js"></script>
+  <!--<script src="NodeMCUTools/plugins/compiler.js"></script>-->
+  <script src="NodeMCUTools/plugins/assembler.js"></script>
+  <script src="NodeMCUTools/plugins/getGitHub.js"></script>
+  <script src="NodeMCUTools/libs/targz.js"></script> <!-- needed for npmMpdules -->
+  <script src="NodeMCUTools/plugins/npmModules.js"></script>
+  <!--<script src="NodeMCUTools/plugins/setTime.js"></script>-->
 
-  <!--<script src="EspruinoTools/libs/esprima/esprima.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
-  <!--<script src="EspruinoTools/libs/esprima/esmangle.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
-  <!--<script src="EspruinoTools/libs/esprima/escodegen.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
-  <script src="EspruinoTools/plugins/minify.js"></script>
+  <!--<script src="NodeMCUTools/libs/esprima/esprima.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
+  <!--<script src="NodeMCUTools/libs/esprima/esmangle.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
+  <!--<script src="NodeMCUTools/libs/esprima/escodegen.js"></script> &lt;!&ndash; needed for minify &ndash;&gt;-->
+  <script src="NodeMCUTools/plugins/minify.js"></script>
   
   <script src="js/plugins/tutorial.js"></script>
   <script src="js/plugins/webcam.js"></script>
