--- a/blockly/blockly.html
+++ b/blockly/blockly.html
@@ -4,8 +4,8 @@
     <script type="text/javascript" src="blockly_compressed.js"></script>
     <script type="text/javascript" src="blocks_compressed.js"></script>
     <script type="text/javascript" src="en.js"></script>
-    <script type="text/javascript" src="javascript_compressed.js"></script>
-    <script type="text/javascript" src="blockly_espruino.js"></script>
+    <script type="text/javascript" src="lua_compressed.js"></script>
+    <script type="text/javascript" src="blockly_nodemcu.js"></script>
     <script type="text/javascript" src="field_textarea.js"></script>
     <style>
       html, body {
@@ -255,36 +255,36 @@
       </block>
       TODO - need to auto-add calls here?? 
     </category> -->
-    <category name="Espruino">
-      <block type="espruino_timeout">
+    <category name="NodeMCU">
+      <block type="nodemcu_timeout">
         <value name="SECONDS"><block type="math_number"><title name="NUM">1</title></block></value>
       </block>
-      <block type="espruino_interval">
+      <block type="nodemcu_interval">
         <value name="SECONDS"><block type="math_number"><title name="NUM">1</title></block></value>
       </block>
-      <block type="espruino_getTime"></block>
-      <block type="espruino_pin"></block>
-      <block type="espruino_watch">
-        <value name="PIN"><block type="espruino_pin"><title name="PIN">BTN1</title></block></value>
+      <block type="nodemcu_getTime"></block>
+      <block type="nodemcu_pin"></block>
+      <block type="nodemcu_watch">
+        <value name="PIN"><block type="nodemcu_pin"><title name="PIN">BTN1</title></block></value>
       </block>
-      <block type="espruino_digitalWrite">
-        <value name="PIN"><block type="espruino_pin"><title name="PIN">LED1</title></block></value>
+      <block type="nodemcu_digitalWrite">
+        <value name="PIN"><block type="nodemcu_pin"><title name="PIN">LED1</title></block></value>
       </block>
-      <block type="espruino_digitalPulse">
-        <value name="PIN"><block type="espruino_pin"><title name="PIN">LED1</title></block></value>
+      <block type="nodemcu_digitalPulse">
+        <value name="PIN"><block type="nodemcu_pin"><title name="PIN">LED1</title></block></value>
         <value name="VAL"><block type="logic_boolean"><title name="BOOL">TRUE</title></block></value>
         <value name="TIME"><block type="math_number"><title name="NUM">100</title></block></value>
       </block>
-      <block type="espruino_digitalRead">
-        <value name="PIN"><block type="espruino_pin"><title name="PIN">BTN1</title></block></value>
+      <block type="nodemcu_digitalRead">
+        <value name="PIN"><block type="nodemcu_pin"><title name="PIN">BTN1</title></block></value>
       </block>
-      <block type="espruino_analogWrite">
-        <value name="PIN"><block type="espruino_pin"><title name="PIN">A1</title></block></value>
+      <block type="nodemcu_analogWrite">
+        <value name="PIN"><block type="nodemcu_pin"><title name="PIN">A1</title></block></value>
       </block>
-      <block type="espruino_analogRead">
-        <value name="PIN"><block type="espruino_pin"><title name="PIN">A0</title></block></value>
+      <block type="nodemcu_analogRead">
+        <value name="PIN"><block type="nodemcu_pin"><title name="PIN">A0</title></block></value>
       </block>
-      <block type="espruino_code">
+      <block type="nodemcu_code">
       </block>
     </category>
     <category name="Functions" custom="PROCEDURE"></category>
@@ -292,7 +292,7 @@
 
     <!-- Blockly initial code -->
 <xml id="blocklyInitial" style="display: none">
-  <block type="espruino_watch" inline="true"  ><title name="EDGE">rising</title><value name="PIN"><block type="espruino_pin"><title name="PIN">BTN1</title></block></value><statement name="DO"><block type="espruino_digitalWrite" inline="true"><value name="PIN"><block type="espruino_pin"><title name="PIN">LED1</title></block></value><value name="VAL"><block type="logic_boolean"><title name="BOOL">TRUE</title></block></value><next><block type="espruino_timeout" inline="true"><value name="SECONDS"><block type="math_number"><title name="NUM">1</title></block></value><statement name="DO"><block type="espruino_digitalWrite" inline="true"><value name="PIN"><block type="espruino_pin"><title name="PIN">LED1</title></block></value><value name="VAL"><block type="logic_boolean"><title name="BOOL">FALSE</title></block></value></block></statement></block></next></block></statement></block>
+  <block type="nodemcu_watch" inline="true"  ><title name="EDGE">rising</title><value name="PIN"><block type="nodemcu_pin"><title name="PIN">BTN1</title></block></value><statement name="DO"><block type="nodemcu_digitalWrite" inline="true"><value name="PIN"><block type="nodemcu_pin"><title name="PIN">LED1</title></block></value><value name="VAL"><block type="logic_boolean"><title name="BOOL">TRUE</title></block></value><next><block type="nodemcu_timeout" inline="true"><value name="SECONDS"><block type="math_number"><title name="NUM">1</title></block></value><statement name="DO"><block type="nodemcu_digitalWrite" inline="true"><value name="PIN"><block type="nodemcu_pin"><title name="PIN">LED1</title></block></value><value name="VAL"><block type="logic_boolean"><title name="BOOL">FALSE</title></block></value></block></statement></block></next></block></statement></block>
 </xml>
 
   </body>
