--- a/main.html
+++ b/main.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8" />
 
   <link href="css/ui-lightness/jquery-ui-1.10.1.custom.css" rel="stylesheet">
-  <link href="css/reset.css" rel="stylesheet" media="all"></link>
-  <link href="css/main.css" rel="stylesheet" media="all"></link>
-  <link href="css/typography.css" rel="stylesheet" media="all"></link>
-  <link href="css/abstracts.css" rel="stylesheet" media="all"></link>
-  <link href="css/components.css" rel="stylesheet" media="all"></link>
-  <link href="css/icons.css" rel="stylesheet" media="all"></link>
+  <link href="css/reset.css" rel="stylesheet" media="all">
+  <link href="css/main.css" rel="stylesheet" media="all">
+  <link href="css/typography.css" rel="stylesheet" media="all">
+  <link href="css/abstracts.css" rel="stylesheet" media="all">
+  <link href="css/components.css" rel="stylesheet" media="all">
+  <link href="css/icons.css" rel="stylesheet" media="all">
   
   <link rel="stylesheet" href="js/libs/codemirror/css/codemirror.css">  
-  <link rel="stylesheet" href="css/libs/jquery.treeview.css"></link>
+  <link rel="stylesheet" href="css/libs/jquery.treeview.css">
   <link rel="stylesheet" href="js/libs/codemirror/addon/lint/lint.css">
   <link rel="stylesheet" href="js/libs/codemirror/addon/hint/show-hint.css">
   <link rel="stylesheet" href="js/libs/codemirror/addon/dialog/dialog.css">
@@ -188,6 +188,6 @@
       </div>
 
     </div>
-
+  </div>
 </body>
 </html>
