--- a/main.html
+++ b/main.html
@@ -80,7 +80,7 @@
   <script src="NodeMCUTools/core/flasher.js"></script>
   
   <script src="js/core/editorBlockly.js"></script> 
-  <script src="js/core/editorJavaScript.js"></script> 
+  <script src="js/core/editorLua.js"></script>
   <script src="js/core/send.js"></script>
   
   
