--- a/data/settings_about.html
+++ b/data/settings_about.html
@@ -26,7 +26,7 @@
   <dt>Shift-Ctrl-F / Cmd-Option-F</dt><dd>Replace</dd>
   <dt>Shift-Ctrl-R / Shift-Cmd-Option-F</dt><dd>Replace all</dd>
 
-  <dt>Ctrl-Space</dt><dd>Autocomplete</dd>
+  <dt>Esc</dt><dd>Autocomplete</dd>
   <dt>Ctrl-I</dt><dd>Find type at cursor</dd>
   <dt>Alt-.</dt><dd>Jump to definition (Alt-, to jump back)</dd>
   <dt>Ctrl-Q</dt><dd>Rename variable</dd>
